Started working on conact directory example app

--- a/examples/requirejs/js/app/templates/ApplicationView.html
+++ b/examples/requirejs/js/app/templates/ApplicationView.html
@@ -1,1 +1,1 @@
-<a href="#" class="hello">click me</a>
+<a href="#" class="increment">increment</a> | <a href="#" class="decrement">decrement</a> Value: <%= value %>
