Updated example to use new Layout and Region classes

--- a/examples/requirejs/js/app/templates/ApplicationView.html
+++ b/examples/requirejs/js/app/templates/ApplicationView.html
@@ -1,1 +1,6 @@
-<a href="#" class="increment">increment</a> | <a href="#" class="decrement">decrement</a> Value: <%= value %>
+<div>APPLICATION VIEW</div>
+<div>
+  <a href="#" class="add">Add contact</a>
+</div>
+<div class="nav"></div>
+<div class="contacts"></div>
