--- a/examples/requirejs/js/app/templates/ContactView.html
+++ b/examples/requirejs/js/app/templates/ContactView.html
@@ -5,3 +5,4 @@
     <dt>Tel:</dt><dd><%= tel %></dd>
     <dt>Email:</dt><dd><a href="mailto:<%= email %>"><%= email %></a></dd>
 </dl>
+<p><a href="#" class="delete">Delete</a></p>
